Mores Spreadsheet v3 APIs for loading cels from selected spreadsheet.